objects/SharingAccess__c.object
<CustomObject>
    <fields>
        <fullName>ActiveUser__c</fullName>
        <formula>UserId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMCDCompany__c</fullName>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>LOB1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrincipalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a Principal Account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Principal Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>SharingAcees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowInListView__c</fullName>
        <description>This flag is used to show records for the users in a list view</description>
        <formula>UserId__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show In List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserDisplayName__c</fullName>
        <formula>UserId__r.LastName + &apos;, &apos; + UserId__r.FirstName + &apos; (&apos; + Id + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SharingAcees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bypassEditValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for bypassing prevent_Editing_Records VR rule in SharingAccess trigger</description>
        <label>bypassEditValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValid__c</fullName>
        <formula>OR (
	AND ( ISBLANK ( TEXT ( IMCDCompany__c ) ), Global__c, NOT ( ISBLANK ( TEXT ( LOB1__c ) ) ) )
	, AND ( NOT ( ISBLANK ( TEXT ( IMCDCompany__c ) ) ) , NOT ( Global__c ), NOT ( ISBLANK ( TEXT ( LOB1__c ) ) ) )
	, AND ( NOT ( ISBLANK ( PrincipalId__c ) ), NOT ( ISBLANK ( TEXT ( LOB1__c ) ) ), ISBLANK ( TEXT ( IMCDCompany__c ) ),  Global__c )
	, AND ( NOT ( ISBLANK ( PrincipalId__c ) ), NOT ( ISBLANK ( TEXT ( LOB1__c ) ) ), NOT ( ISBLANK ( TEXT ( IMCDCompany__c ) ) ),  NOT ( Global__c ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastSharingReconciliationDate__c</fullName>
        <inlineHelpText>Leave this field empty, and do not update.</inlineHelpText>
        <label>Last Sharing Recalculation Date</label>
        <type>DateTime</type>
    </fields>
    <label>Sharing Access</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sharing Access</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>LOBisrequired</fullName>
        <active>false</active>
        <description>Choosing a Principal requires to choose LOB</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PrincipalId__c)), ISBLANK(TEXT(LOB1__c))),TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>LOB1__c</errorDisplayField>
        <errorMessage>Choosing a Principal requires to choose LOB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prevent_Editing_Records</fullName>
        <active>true</active>
        <description>throws an error upon attempt to edit the record</description>
        <errorConditionFormula>IF( AND(bypassEditValidationRule__c = FALSE, OR(ISCHANGED(Global__c),ISCHANGED(IMCDCompany__c),ISCHANGED(LOB1__c),ISCHANGED(Name),ISCHANGED(PrincipalId__c),ISCHANGED(UserId__c) ) ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Editing the Sharing Access record is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prevent_Global_Lob_Csharing_Creation</fullName>
        <active>true</active>
        <description>Sharing based on record that is global and has Lob value, covered with criteria based sharing (public groups)</description>
        <errorConditionFormula>IF(AND(ISBLANK(TEXT(IMCDCompany__c)), ISBLANK(PrincipalId__c), Global__c=TRUE, 
NOT(ISBLANK( TEXT(LOB1__c) )) ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Can not create custom sharing based on LOB and Global parameter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sharingNotAllowedIfOnlyLOBSelected</fullName>
        <active>true</active>
        <description>can&apos;t share record based only on LOB</description>
        <errorConditionFormula>IF(AND(ISBLANK(TEXT(IMCDCompany__c)), ISBLANK(PrincipalId__c), Global__c=FALSE, 
NOT(ISBLANK( TEXT(LOB1__c) )) ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Custom Sharing based only on LOB and User is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sharingNotAllowedIfOnlyPrincipalSelected</fullName>
        <active>true</active>
        <description>can&apos;t share record based only on Principal and not Global</description>
        <errorConditionFormula>IF(AND(ISBLANK(TEXT(IMCDCompany__c)), ISBLANK(TEXT(LOB1__c)), Global__c=FALSE, 
NOT(ISBLANK(PrincipalId__c)) ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Custom Sharing based only on Principal and User is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sharingNotAllowedLOBPrincipal</fullName>
        <active>true</active>
        <description>can&apos;t share record based only on LOB</description>
        <errorConditionFormula>IF(AND(ISBLANK(TEXT(IMCDCompany__c)), NOT(ISBLANK(PrincipalId__c)), Global__c=FALSE, 
NOT(ISBLANK( TEXT(LOB1__c) )) ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Custom Sharing based only on LOB, Principal and User is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validateGlobalCompany</fullName>
        <active>true</active>
        <description>a global record of sharingAccess should not be assigned to company</description>
        <errorConditionFormula>IF( 
  AND(
    $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c = True,
    Global__c = TRUE, 
    ! ISBLANK( TEXT(IMCDCompany__c) ) 
  ),
TRUE,
FALSE)</errorConditionFormula>
        <errorMessage>IMCDComany field has to be empty on Global SharingAccess records</errorMessage>
    </validationRules>
</CustomObject>